--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,16 @@ language: go
 go:
  - 1.11.x
  
- install:
+install:
   - go get GitHub.com/gohugoio/hugo
   
-  script:
- - mkdir -p themes/beautifulhugo && git clone https://GitHub.com/halogenica/beautifulhugo.git themes/beautifulhugo
- - hugo --theme beautifulhugo
- deploy:
- provider: pages
- skip_cleanup: true
- GitHub_token: $GITHUB_TOKEN
- local_dir: public
+script:
+   - mkdir -p themes/beautifulhugo && git clone https://GitHub.com/halogenica/beautifulhugo.git themes/beautifulhugo
+   - hugo --theme beautifulhugo
+deploy:
+   provider: pages
+   skip_cleanup: true
+   GitHub_token: $GITHUB_TOKEN
+   local_dir: public
  on:
- branch: maste
+   branch: master
